# review

./: .env  .gitlab-ci.yml  .gitmodules  CHANGELOG-0.4.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bitbucket-pipelines.yml  build.rs  diesel.toml  sample_feedbacks.json
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
api_service/: Cargo.toml
api_service/config/: reviewd_config.json
api_service/src/: error.rs  lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
client/: Cargo.toml
client/src/: error.rs  file.rs  http.rs  lib.rs  models.rs  views.rs
db/: Cargo.toml
db/src/: error.rs  lib.rs  models.rs  schema.rs
docs/: README.md  openapi.html  openapi.yaml  swagger.html  swagger.yaml
migrations/2019-02-12-202203_central_repo_db/: down.sql  up.sql
migrations/2019-09-18-160556_initialize_review_database/: down.sql  up.sql
migrations/2019-10-02-180226_initialize_review_database/: down.sql  up.sql
migrations/2019-11-21-195224_create_indicator_update_procedure/: down.sql  up.sql
migrations/2019-11-22-173308_create_cluster_update_procedure/: down.sql  up.sql
migrations/2019-12-27-000548_create_event_and_kafka_metadata/: down.sql  up.sql
migrations/2020-01-16-071246_create_binary_description_table/: down.sql  up.sql
migrations/2020-01-24-134220_create_template/: down.sql  up.sql
migrations/2020-02-04-210014_create_cluster_outlier_upsert_procedures/: down.sql  up.sql
reviewd/: Cargo.toml
reviewd/src/: lib.rs
reviewd/src/database/: category.rs  cluster.rs  data_source.rs  description.rs  error.rs  function.rs  indicator.rs  mod.rs  outlier.rs  qualifier.rs  query.rs  raw_event.rs  schema.rs  status.rs
reviewd/src/server/: error.rs  mod.rs  route.rs
src/: app.rs  cluster.rs  error.rs  event.rs  lib.rs  main.rs
src/cli/: main.rs
src/daemon/: main.rs
src/daemon/api_service/: Cargo.toml
src/daemon/api_service/src/: lib.rs
src/daemon/db/src/: lib.rs  schema.rs
src/database/: category.rs  cluster.rs  data_source.rs  description.rs  event.rs  event_id.rs  experiment.rs  function.rs  indicator.rs  kafka_metadata.rs  mod.rs  outlier.rs  qualifier.rs  query.rs  raw_event.rs  schema.rs  status.rs  template.rs
src/kafka_consumer/: fetch.rs  mod.rs
src/server/: error.rs  mod.rs  route.rs
