[package]
name = "review"
version = "0.6.2"
authors = [
    "Atsushi Yoshioka <yoshioka@petabi.com>",
    "Min Kim <msk@petabi.com>",
    "Sehkone Kim <sehkone@petabi.com>",
]
edition = "2018"
publish = false

[dependencies]
reviewd = { path = "./reviewd" }
clap = "2"
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1"
log = "0.4"
url = "2"
