[package]
name = "review"
version = "0.6.2"
authors = [
    "Atsushi Yoshioka <yoshioka@petabi.com>",
    "Min Kim <msk@petabi.com>",
    "Sehkone Kim <sehkone@petabi.com>",
]
edition = "2018"
publish = false

[dependencies]
actix = "0.8"
actix-files = "0.1.6"
actix-web = "1.0.0"
base64 = "0.11"
# the version of bigdecimal must be the same as diesel (https://github.com/diesel-rs/diesel/issues/1753)
bigdecimal = { version = "0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
crossbeam-channel = "0.4"
diesel = { version = "1.4", features = ["chrono", "numeric", "postgres", "r2d2", "serde_json"] }
diesel_derives = "1.4"
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.7"
eventio = "0.3.3"
failure = "0.1"
futures = "0.1"
log = "0.4"
num-traits = "0.2"
r2d2 = "0.8"
reqwest = "0.9"
serde = { version = "1",  features = ["derive"] }
serde_json = "1"
structured = { git = "https://github.com/petabi/structured.git", rev = "7d10bba" }
tokio = "0.1"
url = "2"
