[package]
name = "api_service"
version = "0.3.2"
authors = ["Atsushi Yoshioka <yoshioka@petabi.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
db = { path = "../db" }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
reqwest = "0.9"
serde = { version = "1",  features = ["derive"] }
serde_json = "1"
url = "1.7"
