[package]
name = "client"
version = "0.3.5"
authors = [
    "Atsushi Yoshioka <yoshioka@petabi.com>",
    "Min Kim <msk@petabi.com>",
]
edition = "2018"
publish = false

[dependencies]
chrono = "0.4"
remake = { path = "../remake/remake" }
reqwest = "0.9"
rmp-serde = "0.13"
serde = { version = "1",  features = ["derive"] }
serde_json = "1"
url = "1.7"

[dependencies.cursive]
version = "0.10"
default-features = false
features = ["termion-backend"]
