[package]
name = "db"
version = "0.3.1"
authors = ["Atsushi Yoshioka <yoshioka@petabi.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "1.4"
diesel_derives = "1.4"
failure = "0.1"
futures = "0.1"
r2d2 = "0.8"
serde_json = "1"
serde = { version = "1",  features = ["derive"] }

[dependencies.chrono]
version = "0.4"
features = ["serde"]
