[package]
name = "reviewd"
version = "0.1.0"
authors = ["Atsushi Yoshioka <yoshioka@petabi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0.0"
base64 = "0.10"
diesel = { version = "1.4", features = ["chrono", "r2d2", "postgres"] }
diesel_migrations = "1.4"
diesel_derives = "1.4"
env_logger = "0.7"
failure = "0.1"
futures = "0.1"
hex = "0.4"
log = "0.4"
remake = { path = "../remake" }
reqwest = "0.9"
rmp-serde = "0.14"
r2d2 = "0.8"
serde_json = "1"
serde = { version = "1",  features = ["derive"] }
tokio = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
