[package]
name = "reviewd"
version = "0.1.0"
authors = ["Atsushi Yoshioka <yoshioka@petabi.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0.0"
base64 = "0.10"
crossbeam-channel = "0.3"
diesel = { version = "1.4", features = ["chrono", "r2d2", "postgres"] }
diesel_migrations = "1.4"
diesel_derives = "1.4"
eventio = { git = "https://github.com/petabi/eventio.git", tag = "0.1.0" }
failure = "0.1"
futures = "0.1"
reqwest = "0.9"
rmp-serde = "0.14"
r2d2 = "0.8"
serde_json = "1"
serde = { version = "1",  features = ["derive"] }
tokio = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
