[package]
name = "reviewd"
version = "0.1.0"
authors = ["Atsushi Yoshioka <yoshioka@petabi.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-files = "0.1.6"
actix-web = "1.0.0"
base64 = "0.10"
# the version of bigdecimal must be the same as diesel (https://github.com/diesel-rs/diesel/issues/1753)
bigdecimal = { version = "0.1", features = ["serde"] }
crossbeam-channel = "0.3"
diesel = { version = "1.4", features = ["chrono", "numeric", "postgres", "r2d2", "serde_json"] }
diesel_migrations = "1.4"
diesel_derives = "1.4"
eventio = { git = "https://github.com/petabi/eventio.git", tag = "0.1.0" }
failure = "0.1"
futures = "0.1"
num-traits = "0.2"
reqwest = "0.9"
r2d2 = "0.8"
serde_json = "1"
serde = { version = "1",  features = ["derive"] }
structured = { git = "https://github.com/petabi/structured.git", rev = "b37c661" }
tokio = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
